fixed buttons invisible

--- a/scss/iframe-lightbox.scss
+++ b/scss/iframe-lightbox.scss
@@ -134,6 +134,7 @@
 }
 
 .iframe-lightbox .btn-close {
+	display: block;
 	position: fixed;
 	top: 1.000rem;
 	right: 1.000rem;
